# ozon-posting-service

./: .gitignore  Dockerfile  docker-compose.yml  docker-compose_dev.yml  pyproject.toml
application/: config.py  db.py  main.py
application/clients/market/: client.py
application/database/: alembic.ini
application/database/migrations/: env.py
application/database/migrations/versions/: be455eb3b042_separate_order_and_orderitems.py
application/database/models/: orders.py
application/dependencies/: sheets.py
application/orders/: repo.py  router.py  test_json.py  what_is
application/orders/integrations/market/: client.py
application/orders/models/: orders.py
application/orders/services/: manage_repo.py  manage_transformation.py  use_case.py
application/orders/shemas/: enums.py  notification.py  orders.py  orders_from_market.py
application/repositories/: repo.py
application/repositories/google_sheets/: repository.py
application/services/: sheets.py  use_case.py
application/sсhemas/: notification.py  orders.py  orders_from_market.py  transformation.py
application/v1/: responses.py  router.py
migrations/: env.py
migrations/versions/: 39d271b8047d_change_column_offer_id_from_int_to_.py  655e69cb7ab5_change_change_sku_to_biginteger.py  c0587edc3bb7_create_table_orders.py  fb20ae706259_add_column_name_into_teble_orders.py
